# crypto-labs

./: CMakeLists.txt
demo/: rc4.c
include/: arcfour.h  crypto.h
src/: arcfour.c
tests/: encoded.txt  output.txt
